# aelf-api-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
.hooks/: install_hooks.sh
aelf-client/schemas/: lectures.py  messe.py  text.py  vepres.py
aelf-client/schemas/enums/: couleurs.py  zones.py
aelf-client/schemas/responses/: laudes.py  lectures.py  messes.py  vepres.py
aelf_api_client/: client.py
aelf_api_client/schemas/: complies.py  complines.py  informations.py  lauds.py  mass.py  none.py  readings.py  sext.py  terce.py  vespers.py
aelf_api_client/schemas/enums/: __init__.py  color.py  entity.py  zone.py
aelf_api_client/schemas/responses/: __init__.py  complies.py  complines.py  informations.py  laudes.py  lauds.py  lectures.py  masses.py  messes.py  none.py  readings.py  sext.py  sexte.py  terce.py  tierce.py  vepres.py  vespers.py
aelf_client/: __init__.py
aelf_client/schemas/: laudes.py  lecture.py  none.py  sexte.py  tierce.py
aelf_client/schemas/responses/: complies.py  informations.py  none.py  sexte.py  tierce.py
tests/: conftest.py  test_complies.py  test_complines.py  test_informations.py  test_laudes.py  test_lauds.py  test_lectures.py  test_masses.py  test_messes.py  test_none.py  test_readings.py  test_sext.py  test_sexte.py  test_terce.py  test_tierce.py  test_vepres.py  test_vespers.py
